# simsphere

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  GETTINGSTARTED.md  INSTALL  LICENSE  Makefile  README.md  __README.TXT  advect.f90  advect.for  air.f90  air.for  albedo.f90  albedo.for  avr.f90  ball.f90  ball.for  below.f90  below.for  block.f90  block.for  bri.f90  bri.for  calc.f90  calc.for  canres.f90  canres.for  capac.f90  capac.for  co2flx.f90  co2flx.for  cond.f90  cond.for  constant.f90  constant.h  daykm.f90  (+71 more)
data/default/: i_model.json
data/orig/: README
data/testing/: README  i_model_test1_f90.json  o_model_test1_f90.json
scripts/: build-json-fortran.sh  build-libcompare.sh  build.sh  generate-code-listing.sh  package-simsphere.sh
src/: Makefile  advect.f90  air.f90  albedo.f90  avr.f90  ball.f90  below.f90  block.f90  bri.f90  calc.f90  canres.f90  capac.f90  cmp_mod.f90  co2flx.f90  compare.f90  config_gen.f90  config_mod.f90  constants_mod.f90  daykm.f90  fine.f90  flux.f90  gettbl.f90  globals.f90  gtemp.f90  hot.f90  input.f90  input_gen.f90  intpol.f90  levels.f90  loadjson.f90  main.f90  mom.f90  momday.f90  netrad.f90  output.f90  ozone.f90  prfile.f90  psgcal.f90  pslcal.f90  psoil.f90  (+16 more)
src/unused_archive/: cond.f90  spline.f90  splint.f90  stomc.f90  stomfs.f90
tests/: Makefile  test_air.f90  test_albedo.f90  test_average.f90  test_avr.f90  test_ball.f90  test_below.f90  test_bri.f90  test_calc.f90  test_canres.f90  test_capac.f90  test_co2flx.f90  test_daykm.f90  test_fine.f90  test_flux.f90  test_fstabh.f90  test_gtemp.f90  test_hot.f90  test_intpol.f90  test_load_data.f90  test_mom.f90  test_momday.f90  test_netrad.f90  test_output.f90  test_ozone.f90  test_prfile.f90  test_psgcal.f90  test_pslcal.f90  test_psoil.f90  test_restrn.f90  test_rohms.f90  test_slope.f90  test_snding.f90  test_spline.f90  test_stab.f90  test_trig.f90  test_vegflx.f90  test_veghot.f90  test_vegrad.f90  test_vegvel.f90  (+3 more)
